[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/coin/steak.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Bullet.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[sub_resource type="Animation" id=5]
resource_name = "destroy"
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "feasted_on"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2, 3.6, 4, 4.4, 4.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 15.0

[node name="Bullet" type="RigidBody2D"]
material = SubResource( 1 )
collision_layer = 128
collision_mask = 16
continuous_cd = 2
contact_monitor = true
script = ExtResource( 2 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
material = SubResource( 2 )
amount = 5
lifetime = 0.3
speed_scale = 3.0
local_coords = false
spread = 0.0
gravity = Vector2( 0, 0 )
scale_amount = 0.8
color = Color( 1, 1, 1, 0.705882 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 0, -4 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 4
vframes = 4

[node name="PhysicsCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroy = SubResource( 5 )
anims/feasted_on = SubResource( 7 )

[node name="GroundDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 7 )
collision_mask = 18

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="TriggerCollision" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 6 )
disabled = true

[connection signal="timeout" from="Timer" to="." method="destroy"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
